fix z-index

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -6,7 +6,7 @@
     width: 100%;
     background-color: #ffffff;
     align-items: center;
-    z-index: 99;
+    z-index: 2;
     @include ease;
 
     @include MQ(ML) {
